--- a/apps/web/src/styles/projectlist.module.scss
+++ b/apps/web/src/styles/projectlist.module.scss
@@ -1,20 +1,32 @@
-.container{
+.container {
   width: 100%;
   height: 100vh;
 }
+
 .text {
   padding: 10px 10px 0px 30px;
   display: flex;
   flex-direction: column;
 }
+
 .textStyle {
   padding-left: 5px;
   padding-top: 5px;
 }
+
+.cardTextStyle {
+  display: flex;
+  // justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+}
+
 .dividerStyle {
   border-bottom: 1px solid #ccc;
   padding: 5px 1px 5px 1px;
 }
+
 .searchField {
   padding: 20px 10px 0px 30px;
   display: flex;
@@ -22,11 +34,13 @@
   justify-content: space-between;
   gap: 10px;
 }
+
 .searchButton {
   display: flex;
   flex-direction: row;
   flex-shrink: initial;
 }
+
 .searchButton {
   padding: 12px 20px 12px 20px;
   border-radius: 8px;
@@ -34,11 +48,13 @@
   gap: 8px;
   color: #6941c6;
 }
+
 .searchButton:hover {
   background-color: #7f56d9;
   color: #ffffff;
 }
-.resetButton [disabled]{
+
+.resetButton [disabled] {
   padding: 12px 20px 12px 20px;
   border-radius: 8px;
   border: 1px;
@@ -46,51 +62,70 @@
   color: black;
   background-color: #ccc;
 }
+
 .resetButton:not([disabled]):hover {
   background-color: #c4c4c6;
   color: #ffffff;
 }
+
 .inputFilter {
   display: flex;
   gap: 10px;
 }
+
+.cardDiv1 {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  gap: 30px;
+}
+
 .button {
   display: flex;
   gap: 20px;
 }
+
 .pagination {
   padding: 10px 10px 10px 0px;
   display: flex;
   justify-content: end;
 }
+
 table {
   border-collapse: collapse;
   width: 100%;
   border: 1px solid #ccc;
 }
+
 th {
   background-color: #f2f2f2;
   padding: 8px;
   text-align: center;
-} 
+}
+
 tr {
   border-bottom: 1px solid #ccc;
 }
+
 td {
   padding: 8px;
 }
+
 .tablerow {
   display: flex;
   flex-direction: row;
   column-gap: 15px;
   cursor: pointer;
 }
+
 tr:nth-child(even) {
   background-color: #f2f2f2;
 }
+
 tr:hover {
   background-color: #e0e0e0;
 }
+
 .tableContainer {
   padding: 10px 10px 0px 30px;
   // height: 100vh;
@@ -98,9 +133,11 @@ tr:hover {
   flex-direction: column;
   gap: 20px;
 }
-.dashBoardcontainer{
+
+.dashBoardcontainer {
   padding: 2px;
 }
+
 .dashBoard {
   height: 300px;
 }
@@ -108,30 +145,34 @@ tr:hover {
 .card {
   display: flex;
   justify-content: center;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   width: 20%;
-  border-radius: 2px;
+  height: 20%;
+  border-radius: 10px;
+  padding: 10px;
+  margin: 10px;
 }
+
 .card:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .graphCard {
   display: flex;
   justify-content: center;
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-  width: 50%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 51%;
   column-gap: 50px;
-  border-radius: 2px;
+  border-radius: 20px;
 }
 
 .graphCard:hover {
-  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .cardContainer {
   padding: 15px 2px;
-} 
+}
 
 .cardDiv {
   display: flex;
@@ -141,8 +182,9 @@ tr:hover {
 
 .barCarddDiv {
   display: flex;
-  justify-content: space-evenly;
-  padding: 10px 0px 10px 5px;
+  justify-content: center;
+  padding: 10px;
+  gap: 30px;
 
 }
 
