--- a/apps/web/src/styles/project.module.scss
+++ b/apps/web/src/styles/project.module.scss
@@ -98,7 +98,7 @@
 }
 
 .tableContainer {
-  padding: 10px;
+  // padding: 10px;
   width: 100%;
   // height: 100%;
   // overflow-x: auto;
@@ -117,19 +117,12 @@
   border-collapse: collapse;
   height: 100%;
 
-  th{
-    border: 1px solid #c7c3c3a9;
-    text-align: center;
-    font-weight: 600;
-    font-size: 12px;
-    padding: 1rem;
-  }
+  th,
   td {
-    border: 1px solid #c7c3c3a9;
-    text-align: center;
-    font-weight: 500;
+    border: 1px solid #000000;
+    text-align: left;
+    font-weight: 600;
     font-size: 11px;
-    padding: .5rem;
   }
   thead {
     tr {
