--- a/apps/web/src/styles/projectSettings.module.scss
+++ b/apps/web/src/styles/projectSettings.module.scss
@@ -166,7 +166,7 @@
   th,
   td {
     border: 1px solid #000000;
-    text-align: center;
+    text-align: left;
     font-weight: 600;
     font-size: 11px;
   }
@@ -191,7 +191,7 @@
 }
 
 .tableHeading {
-  align-items: center;
+  align-items: left;
 }
 
 .pagination {
