--- a/apps/web/src/styles/stockOutwardAdd.module.scss
+++ b/apps/web/src/styles/stockOutwardAdd.module.scss
@@ -226,7 +226,7 @@
     th,
     td {
         border: 1px solid #000000;
-        text-align: center;
+        text-align: left;
         font-weight: 600;
         font-size: 11px;
 
@@ -243,7 +243,7 @@
     }
 
     td {
-        align-items: center;
+        align-items: left;
     }
 
     td:hover,
