--- a/apps/web/src/styles/bom.module.scss
+++ b/apps/web/src/styles/bom.module.scss
@@ -2,15 +2,18 @@
   padding: 10px 10px 10px 10px;
   height: 100vh;
 }
+
 .headingcontainer {
   // padding: 10px 10px 10px 10px;
   // padding-left: 10px;
 }
+
 .subHeader {
   display: flex;
   justify-content: space-between;
   padding-bottom: 10px;
 }
+
 // .abstractAdd{
 //   width:100%;
 //   // background-color: red;
@@ -22,12 +25,14 @@
   height: 100vh;
   gap: 10px;
 }
+
 .submenu {
   background-color: rgb(241, 241, 241);
   width: 20%;
   padding: 5px;
   border-radius: 5px;
 }
+
 .mainContainer {
   // background-color: rgb(243, 243, 243);
   background-color: rgb(255, 255, 255);
@@ -35,11 +40,13 @@
   padding: 5px;
   border-radius: 5px;
 }
+
 .side_menu {
   ul {
     list-style: none;
     margin: 0;
     border-bottom: 1px solid #ccc;
+
     li {
       padding: 5px;
       cursor: pointer;
@@ -48,6 +55,7 @@
     }
   }
 }
+
 .selected {
   display: flex;
   justify-content: space-between;
@@ -56,6 +64,7 @@
   color: #667085;
   width: 80%;
 }
+
 .primarylistContent {
   display: flex;
   justify-content: space-between;
@@ -122,10 +131,12 @@
   align-items: center;
   gap: 3px;
 }
+
 .topSideHeading {
   font-weight: lighter;
   font-size: 0.8rem;
 }
+
 .taskButton {
   display: flex;
   justify-content: flex-end;
@@ -138,14 +149,17 @@
   // height: 100%;
   // overflow-x: auto;
   // overflow-y: none;
-  max-width: 1150px; /* Adjust the maximum width as needed */
+  max-width: 1150px;
+  /* Adjust the maximum width as needed */
   // max-height: 550px;
   margin: 0 auto;
+
   &::-webkit-scrollbar {
     width: 0px;
     background: transparent;
   }
 }
+
 .scrollable_table {
   width: 100%;
   border-collapse: collapse;
@@ -158,6 +172,7 @@
     font-weight: 600;
     font-size: 11px;
   }
+
   thead {
     tr {
       th {
@@ -172,6 +187,7 @@
     align-items: center;
     text-align: center;
   }
+
   td:hover,
   tr:hover {
     background-color: rgb(239, 239, 239);
@@ -187,21 +203,25 @@
 .options:hover {
   background-color: #ddd;
 }
+
 .saveButton {
   display: flex;
   justify-content: end;
   padding-right: 10px;
 }
+
 .totalPanel {
   display: flex;
   justify-content: flex-end;
   background-color: #ccc;
   padding: 10px;
 }
+
 .panelList {
   width: 20%;
   padding: 10px;
 }
+
 .panel {
   display: flex;
   justify-content: space-between;
@@ -209,6 +229,7 @@
   text-align: right;
   align-items: end;
 }
+
 .panelTitle {
   text-align: right;
   align-items: end;
@@ -221,6 +242,7 @@
   justify-content: flex-end;
   padding-right: 10px;
 }
+
 .Secondcontainer {
   height: 100vh;
 }
@@ -240,6 +262,7 @@
   height: 30%;
   // background-color: #0042d2;
 }
+
 .mainBody {
   display: flex;
   flex-direction: column;
@@ -252,15 +275,19 @@
   display: flex;
   align-items: center;
 }
+
 .textContent_1 {
   width: 50%;
 }
+
 .textContent {
   padding: 15px 10px 10px 20px;
 }
+
 .content {
   font-size: 0.7rem;
 }
+
 .backButton {
   width: 50%;
   display: flex;
@@ -285,4 +312,13 @@
 
 .box:last-child::after {
   display: none;
+}
+
+.smallred {
+  font-size: 0.6rem;
+  color: red;
+  display: inline-block;
+  margin-left: 5px;
+  opacity: 0.9;
+
 }
