--- a/apps/web/src/styles/projectSettings.module.scss
+++ b/apps/web/src/styles/projectSettings.module.scss
@@ -39,6 +39,13 @@
   width: 100%;
   gap: 20px;
 }
+.fields_container_3 {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  width: 100%;
+  gap: 20px;
+}
 .box::after {
   content: '';
   display: block;
