--- a/apps/web/src/styles/projectlist.module.scss
+++ b/apps/web/src/styles/projectlist.module.scss
@@ -13,7 +13,11 @@
   padding-left: 5px;
   padding-top: 5px;
 }
-
+.textStyleDescription{
+  padding-left: 5px;
+  padding-top: 5px;
+  font-size: 0.7rem;
+}
 .cardTextStyle {
   display: flex;
   // justify-content: center;
