--- a/apps/web/src/styles/project.module.scss
+++ b/apps/web/src/styles/project.module.scss
@@ -61,6 +61,12 @@
   justify-content: center;
   gap: 15%;
 }
+.inputField {
+  width: 10%;
+  height: 50%;
+  // background-color: #6941c6;
+}
+
 
 .instantAdd {
   color: cadetblue;
@@ -112,6 +118,15 @@
   }
 }
 
+.tableContainerIndent {
+  width: 95%;
+  margin: 2rem auto;
+  &::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
+  }
+}
+
 .scrollable_table {
   width: 100%;
   border-collapse: collapse;
@@ -121,7 +136,7 @@
   td {
     border: 1px solid #000000;
     text-align: left;
-    font-weight: 600;
+    font-weight: 500;
     font-size: 11px;
   }
   thead {
@@ -130,6 +145,7 @@
         background-color: #f2f2f2;
         text-transform: uppercase;
         margin-top: 10px;
+        font-weight: 600;
       }
     }
   }
@@ -143,6 +159,45 @@
     background-color: rgb(239, 239, 239);
   }
 }
+.table_container{
+  display: flex;
+  justify-content: center;
+}
+.scrollable_table_stock_add {
+  width: 70%;
+  // border-collapse: collapse;
+  // height: 100%;
+  // display: flex;
+  // align-items: center;
+
+  th,
+  td {
+    border: 1px solid #000000;
+    text-align: left;
+    font-weight: 500;
+    font-size: 11px;
+  }
+  thead {
+    tr {
+      th {
+        background-color: #f2f2f2;
+        text-transform: uppercase;
+        margin-top: 10px;
+        font-weight: 600;
+      }
+    }
+  }
+
+  td {
+    // align-items: center;
+    // text-align: center;
+  }
+  td:hover,
+  tr:hover {
+    background-color: rgb(239, 239, 239);
+  }
+}
+
 .tableHeading{
   align-items: center;
 }
@@ -209,6 +264,13 @@
 .formConatiner {
   padding-top: 10px;
 }
+.indent_button {
+  display: flex;
+  padding-top: 10px;
+  padding-right: 10px;
+  justify-content: flex-end;
+}
+
 .buttons {
   display: flex;
   padding-top: 10px;
