--- a/apps/web/src/styles/stockOutwardList.module.scss
+++ b/apps/web/src/styles/stockOutwardList.module.scss
@@ -51,6 +51,39 @@
     color: #848289;
     background-color: #ccc;
   }
+
+  .scrollable_table {
+    width: 100%;
+    border-collapse: collapse;
+    height: 100%;
+  
+    th,
+    td {
+      border: 1px solid #000000;
+      text-align: left;
+      font-weight: 500;
+      font-size: 11px;
+    }
+    thead {
+      tr {
+        th {
+          background-color: #f2f2f2;
+          text-transform: uppercase;
+          margin-top: 10px;
+          font-weight: 600;
+        }
+      }
+    }
+  
+    td {
+      // align-items: center;
+      // text-align: center;
+    }
+    td:hover,
+    tr:hover {
+      background-color: rgb(239, 239, 239);
+    }
+  }
   
   .resetButton:not([disabled]):hover {
     background-color: #c4c4c6;
