--- a/apps/web/src/styles/ecoProduction.module.scss
+++ b/apps/web/src/styles/ecoProduction.module.scss
@@ -70,14 +70,14 @@ Button:hover {
     box-shadow: 0px 6px 25px rgba(0, 0, 0, 0.12);
 }
 
-h2 {
+.heading2 {
     color: #333;
     border-bottom: 2px solid #efefef;
     padding-bottom: 10px;
     margin-bottom: 15px;
 }
 
-p {
+.paragraph {
     color: #666;
     line-height: 1.6;
     text-align: justify;
