--- a/apps/web/src/styles/purchaseView.module.scss
+++ b/apps/web/src/styles/purchaseView.module.scss
@@ -77,9 +77,44 @@ tr:hover {
     flex-direction: row;
     justify-content: flex-end;
     gap: 10px;
-    padding: 20px 10px 0px 0px
+    padding: 0px 20px 0px 0px
 }
 
 .bottomTable {
     padding: 20px 10px 10px 10px;
 }
+
+.searchField {
+    padding: 0px 0px 0px 0px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 10px;
+  }
+  .inputFilter {
+    display: flex;
+    gap: 10px;
+  }
+  .searchButton {
+    padding: 12px 20px 12px 20px;
+    border-radius: 8px;
+    border: 1px;
+    gap: 8px;
+    color: #6941c6;
+  }
+  .searchButton:hover {
+    background-color: #7f56d9;
+    color: #ffffff;
+  }
+  .resetButton [disabled] {
+    padding: 12px 20px 12px 20px;
+    border-radius: 8px;
+    border: 1px;
+    gap: 8px;
+    color: #848289;
+    background-color: #ccc;
+  }
+  .resetButton:not([disabled]):hover {
+    background-color: #c4c4c6;
+    color: #ffffff;
+  }
