--- a/apps/web/src/styles/navbar.module.scss
+++ b/apps/web/src/styles/navbar.module.scss
@@ -8,15 +8,37 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: .8rem;
-  background-color: #f0f0f0;
+  padding: 0.8rem;
+  background-color: #175cd3;
+  color: white;
 }
 
+.appContainer {
+  display: flex;
+  align-items: center;
+  width: 60%;
+}
+.acountContainer {
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 40%;
+}
+.container {
+  position: relative;
+}
+.verticalLine::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 1px; /* Adjust the width of the line */
+  background-color: #ffffff; /* Adjust the color as needed */
+  height: 100%;
+}
 .logo {
   font-weight: bold;
   font-size: 16px;
-  margin-right: 20px;
-  padding: 0 24px;
 }
 
 .navLinks {
@@ -46,13 +68,13 @@
   display: flex;
   align-items: center;
   gap: 5px;
-
 }
 
 .rightIcons {
   display: flex;
   flex-direction: row;
   gap: 15px;
+  padding-left: 10px;
   // background-color: lawngreen;
 }
 
@@ -131,7 +153,6 @@
 .dropdownContainer {
   display: flex;
   gap: 1rem;
-
 }
 
 .dropdowntitle {
@@ -204,15 +225,14 @@
 .dropDownItems {
   display: flex;
   flex-direction: column;
-  gap: .2rem;
+  gap: 0.2rem;
   min-width: 250px;
-
 }
 
 .dropDownItems p {
   font-size: 12px;
   color: #475467;
-  padding: 2px
+  padding: 2px;
 }
 
 .itemsTitle h2 {
@@ -235,7 +255,7 @@
   border-radius: 2px;
   max-height: 250px;
   padding: 5px;
-
+  color: black;
 }
 
 .menuItem:hover {
@@ -330,3 +350,47 @@
 
 // .icons {}
 
+.menu_item {
+  display: flex;
+  justify-content: center;
+  padding: 5px 0px;
+  cursor: pointer;
+}
+
+// .menu_item:hover {
+//   color: green;
+//   transform: scale(1.1);
+// }
+
+.menu_item:hover .menu_label {
+  display: block;
+}
+
+.selected:hover {
+  // text-decoration: underline yellow;
+}
+
+/* styles.css */
+.selected {
+  position: relative;
+}
+
+.selected::after {
+  content: ''; /* Create an empty content box */
+  position: absolute; /* Position the line absolutely within the selected item */
+  bottom: 0; /* Position the line at the bottom of the selected item */
+  left: 0;
+  top: 42px;
+  width: 100%; /* Make the line span the full width of the selected item */
+  height: 4px; /* Adjust the height of the line as needed */
+  background-color: #fec84b; /* Change this to your desired line color */
+}
+
+.navMenu {
+  display: flex;
+  gap: 20px;
+}
+.menuContainer {
+  display: flex;
+  gap: 5px;
+}
