--- a/apps/web/src/styles/projectlist.module.scss
+++ b/apps/web/src/styles/projectlist.module.scss
@@ -10,14 +10,17 @@
 }
 
 .textStyle {
-  padding-left: 5px;
-  padding-top: 5px;
+  // padding-left: 5px;
+  // padding-top: 5px;
+  align-items: center;
 }
-.textStyleDescription{
+
+.textStyleDescription {
   padding-left: 5px;
   padding-top: 5px;
   font-size: 0.7rem;
 }
+
 .cardTextStyle {
   display: flex;
   // justify-content: center;
@@ -77,6 +80,12 @@
   gap: 10px;
 }
 
+.inputFilter1 {
+  display: flex;
+  gap: 10px;
+  justify-content: flex-end;
+}
+
 .cardDiv1 {
   display: flex;
   justify-content: center;
@@ -86,7 +95,9 @@
 
 .button {
   display: flex;
-  gap: 20px;
+  // gap: 20px;
+  justify-content: center;
+  // align-items: center;
 }
 
 .pagination {
@@ -197,4 +208,17 @@ tr:hover {
   width: 100%;
 
   padding: 20px 40px;
+}
+
+.header {
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+  padding: 20px 10px 10px 10px;
+}
+
+.firstHeader {
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
 }
