common color changes

--- a/apps/web/src/styles.scss
+++ b/apps/web/src/styles.scss
@@ -78,4 +78,9 @@ body {
   --transition-duration: 0.3s;
   --transition-easing: ease-in-out;
   --animation-duration: 0.5s;
+
+  /* Menu Header color*/
+  --primary-color: #175cd3;
+  --secondary-color: #7f56d9;
+  --danger-color: #fef3f2;
 }
