--- a/apps/web/src/styles/navbar.module.scss
+++ b/apps/web/src/styles/navbar.module.scss
@@ -9,8 +9,8 @@
   align-items: center;
   justify-content: space-between;
   padding: 0.8rem;
-  background-color: #175cd3;
-  color: white;
+  background-color: var(--primary-color);
+  // color: white;
 }
 
 .appContainer {
@@ -39,6 +39,7 @@
 .logo {
   font-weight: bold;
   font-size: 16px;
+  color: white;
 }
 
 .navLinks {
@@ -153,6 +154,7 @@
 .dropdownContainer {
   display: flex;
   gap: 1rem;
+  color: #333;
 }
 
 .dropdowntitle {
@@ -393,4 +395,5 @@
 .menuContainer {
   display: flex;
   gap: 5px;
+  color: white;
 }
