--- a/apps/web/src/styles/machinery.module.scss
+++ b/apps/web/src/styles/machinery.module.scss
@@ -105,25 +105,25 @@
     gap: 20px;
 }
 
-table {
-    border-collapse: collapse;
-    width: 100%;
-    border: 1px solid #ccc;
-}
+// table {
+//     border-collapse: collapse;
+//     width: 100%;
+//     border: 1px solid #ccc;
+// }
 
-th {
-    background-color: #f2f2f2;
-    padding: 8px;
-    text-align: left;
-}
+// th {
+//     background-color: #f2f2f2;
+//     padding: 8px;
+//     text-align: left;
+// }
 
-tr {
-    border-bottom: 1px solid #ccc;
-}
+// tr {
+//     border-bottom: 1px solid #ccc;
+// }
 
-td {
-    padding: 8px;
-}
+// td {
+//     padding: 8px;
+// }
 
 .tablerow {
     display: flex;
@@ -132,13 +132,13 @@ td {
     cursor: pointer;
 }
 
-tr:nth-child(even) {
-    background-color: #f2f2f2;
-}
+// tr:nth-child(even) {
+//     background-color: #f2f2f2;
+// }
 
-tr:hover {
-    background-color: #e0e0e0;
-}
+// tr:hover {
+//     background-color: #e0e0e0;
+// }
 
 .pagination {
     display: flex;
