--- a/apps/web/src/styles/stockOutWardView.module.scss
+++ b/apps/web/src/styles/stockOutWardView.module.scss
@@ -41,23 +41,23 @@
     list-style: none;
     display: inline;
 }
-table {
-    border-collapse: collapse;
-    width: 100%;
-    border: 1px solid #ccc;
-  }
+// table {
+//     border-collapse: collapse;
+//     width: 100%;
+//     border: 1px solid #ccc;
+//   }
   
-  th {
-    background-color: lightgray ;
-    padding: 8px;
-    text-align: left;
-    font-weight: 800;
-  }
+//   th {
+//     background-color: lightgray ;
+//     padding: 8px;
+//     text-align: left;
+//     font-weight: 800;
+//   }
   
-  tr {
-    border-bottom: 1px solid #ccc;
-  }
+//   tr {
+//     border-bottom: 1px solid #ccc;
+//   }
   
-  td {
-    vertical-align: middle;
-  }
+//   td {
+//     vertical-align: middle;
+//   }
