--- a/apps/web/src/styles/gstList.module.scss
+++ b/apps/web/src/styles/gstList.module.scss
@@ -47,25 +47,25 @@
   }
 
 
-  table {
-    border-collapse: collapse;
-    width: 100%;
-    border: 1px solid #ccc;
-  }
+  // table {
+  //   border-collapse: collapse;
+  //   width: 100%;
+  //   border: 1px solid #ccc;
+  // }
   
-  th {
-    background-color: #f2f2f2;
-    padding: 8px;
-    text-align: left;
-  }
+  // th {
+  //   background-color: #f2f2f2;
+  //   padding: 8px;
+  //   text-align: left;
+  // }
   
-  tr {
-    border-bottom: 1px solid #ccc;
-  }
+  // tr {
+  //   border-bottom: 1px solid #ccc;
+  // }
   
-  td {
-    padding: 8px;
-  }
+  // td {
+  //   padding: 8px;
+  // }
 
   .tablerow {
     display: flex;
@@ -74,13 +74,13 @@
     cursor: pointer;
   }
   
-  tr:nth-child(even) {
-    background-color: #f2f2f2;
-  }
+  // tr:nth-child(even) {
+  //   background-color: #f2f2f2;
+  // }
   
-  tr:hover {
-    background-color: #e0e0e0;
-  }
+  // tr:hover {
+  //   background-color: #e0e0e0;
+  // }
   .searchField {
     padding: 10px 10px 0px 10px;
     display: flex;
