--- a/apps/web/src/styles/projectSettings.module.scss
+++ b/apps/web/src/styles/projectSettings.module.scss
@@ -182,7 +182,7 @@
 
   th,
   td {
-    border: 1px solid #000000;
+    // border: 1px solid #000000;
     text-align: left;
     font-weight: 500;
     font-size: 11px;
@@ -190,7 +190,7 @@
   thead {
     tr {
       th {
-        background-color: #f2f2f2;
+        // background-color: #f2f2f2;
         text-transform: uppercase;
         margin-top: 10px;
         font-weight: 700;
