--- a/apps/web/src/styles/purchaseList.module.scss
+++ b/apps/web/src/styles/purchaseList.module.scss
@@ -57,24 +57,24 @@
     color: #ffffff;
 }
 
-table {
-    border-collapse: collapse;
-    width: 100%;
-    border: 1px solid #ccc;
-}
+// table {
+//     border-collapse: collapse;
+//     width: 100%;
+//     border: 1px solid #ccc;
+// }
 
-th {
-    background-color: #f2f2f2;
-    padding: 8px;
-}
+// th {
+//     background-color: #f2f2f2;
+//     padding: 8px;
+// }
 
-tr {
-    border-bottom: 1px solid #ccc;
-}
+// tr {
+//     border-bottom: 1px solid #ccc;
+// }
 
-td {
-    padding: 8px;
-}
+// td {
+//     padding: 8px;
+// }
 
 .tablerow {
     display: flex;
@@ -83,13 +83,13 @@ td {
     cursor: pointer;
 }
 
-tr:nth-child(even) {
-    background-color: whitesmoke;
-}
+// tr:nth-child(even) {
+//     background-color: whitesmoke;
+// }
 
-tr:hover {
-    background-color: #e0e0e0;
-}
+// tr:hover {
+//     background-color: #e0e0e0;
+// }
 
 .tableContainer {
     padding: 10px 10px 0px 10px;
