--- a/apps/web/src/styles/purchaseRequestView.module.scss
+++ b/apps/web/src/styles/purchaseRequestView.module.scss
@@ -66,33 +66,33 @@
 
   }
   
-table {
-    border-collapse: collapse;
-    width: 100%;
-    border: 1px solid #ccc;
-  }
-  th {
-    background-color: #f2f2f2;
-    padding: 8px;
-  } 
-  tr {
-    border-bottom: 1px solid #ccc;
-  }
-  td {
-    padding: 8px;
-  }
+// table {
+//     border-collapse: collapse;
+//     width: 100%;
+//     border: 1px solid #ccc;
+//   }
+//   th {
+//     background-color: #f2f2f2;
+//     padding: 8px;
+//   } 
+//   tr {
+//     border-bottom: 1px solid #ccc;
+//   }
+//   td {
+//     padding: 8px;
+//   }
   .tablerow {
     display: flex;
     flex-direction: row;
     column-gap: 15px;
     cursor: pointer;
   }
-  tr:nth-child(even) {
-    background-color: #f2f2f2;
-  }
-  tr:hover {
-    background-color: #e0e0e0;
-  }
+  // tr:nth-child(even) {
+  //   background-color: #f2f2f2;
+  // }
+  // tr:hover {
+  //   background-color: #e0e0e0;
+  // }
   .tableContainer {
     padding: 12px 40px 0px 40px;
     display: flex;
