--- a/apps/web/src/styles/subSubCategoryList.module.scss
+++ b/apps/web/src/styles/subSubCategoryList.module.scss
@@ -111,33 +111,33 @@
   background-color: #c4c4c6;
   color: #070707;
 }
-table {
-  border-collapse: collapse;
-  width: 100%;
-  border: 1px solid #ccc;
-}
+// table {
+//   border-collapse: collapse;
+//   width: 100%;
+//   border: 1px solid #ccc;
+// }
 
-th {
-  background-color: #f2f2f2;
-  padding: 8px;
-  text-align: left;
-}
+// th {
+//   background-color: #f2f2f2;
+//   padding: 8px;
+//   text-align: left;
+// }
 
-tr {
-  border-bottom: 1px solid #ccc;
-}
+// tr {
+//   border-bottom: 1px solid #ccc;
+// }
 
-td {
-  padding: 8px;
-}
+// td {
+//   padding: 8px;
+// }
 
-tr:nth-child(even) {
-  background-color: #f2f2f2;
-}
+// tr:nth-child(even) {
+//   background-color: #f2f2f2;
+// }
 
-tr:hover {
-  background-color: #e0e0e0;
-}
+// tr:hover {
+//   background-color: #e0e0e0;
+// }
 .pagination {
   display: flex;
   justify-content: end;
