--- a/apps/web/src/styles/projectlist.module.scss
+++ b/apps/web/src/styles/projectlist.module.scss
@@ -4,15 +4,16 @@
 }
 
 .text {
-  padding: 10px 10px 0px 5px;
+  padding: 8px 10px 10px 10px;
   display: flex;
   flex-direction: column;
+  // justify-content: center;
 }
 
 .textStyle {
-  // padding-left: 5px;
-  // padding-top: 5px;
-  align-items: center;
+  padding-left: 5px;
+  display: flex;
+  justify-content: center;
 }
 
 .textStyleDescription {
@@ -182,6 +183,13 @@
     }
   }
 
+  .status{
+    background-color: #ECFDF3;
+    padding: 6px;
+    border-radius: 50px;
+    color: #027A48;
+  }
+
   td:hover,
   tr:hover {
     /* Add hover styles if needed */
@@ -193,7 +201,9 @@
 .tablerow {
   display: flex;
   flex-direction: row;
-  column-gap: 15px;
+  align-items: center;
+  // column-gap: 15px;
+// margin-right: 40px;
   cursor: pointer;
 }
 
