--- a/apps/web/src/styles/newpagination.module.scss
+++ b/apps/web/src/styles/newpagination.module.scss
@@ -23,6 +23,7 @@
   display: flex;
   flex-direction: row;
   gap: 20px;
+  align-items: center;
 }
 
 .selected {
@@ -34,6 +35,7 @@
   overflow: hidden;
   width: 30px;
   height: 30px;
+  cursor: pointer;
 }
 .menu_item {
   border-radius: 50%;
@@ -43,4 +45,5 @@
   overflow: hidden;
   width: 30px;
   height: 30px;
+  cursor: pointer;
 }
