--- a/apps/web/src/styles/projectlist.module.scss
+++ b/apps/web/src/styles/projectlist.module.scss
@@ -198,7 +198,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  // column-gap: 15px;
+  column-gap: 10px;
   // margin-right: 40px;
   cursor: pointer;
 }
