--- a/apps/web/src/styles/project.module.scss
+++ b/apps/web/src/styles/project.module.scss
@@ -1,4 +1,3 @@
-
 .Container {
   width: 100%;
   padding-bottom: 10px;
@@ -66,7 +65,6 @@
   height: 50%;
   // background-color: #6941c6;
 }
-
 
 .instantAdd {
   color: cadetblue;
@@ -159,7 +157,7 @@
     background-color: rgb(239, 239, 239);
   }
 }
-.table_container{
+.table_container {
   display: flex;
   justify-content: center;
 }
@@ -198,7 +196,7 @@
   }
 }
 
-.tableHeading{
+.tableHeading {
   align-items: center;
 }
 .buttonContent {
@@ -213,8 +211,8 @@
   font-size: x-small;
   cursor: pointer;
 }
-.addPlan:hover .addText{
-  opacity: .5;
+.addPlan:hover .addText {
+  opacity: 0.5;
 }
 
 .documentContainer {
