--- a/apps/web/src/styles/sideNav.module.scss
+++ b/apps/web/src/styles/sideNav.module.scss
@@ -1,27 +1,26 @@
 .sideContainer {
-  width: 35vh;
-  background-color: #d9d9d933;
   height: 100vh;
+  color: var(--secondary-color);
+  box-shadow: 5px 0 10px rgba(233, 233, 233, 0.5);
 }
 .side_menu {
   ul {
     list-style: none;
-    padding: 10px;
-    margin: 0;
+    // margin: 0;
     li {
-      padding: 10px;
+      padding: 12px;
       cursor: pointer;
       font-size: 14px;
-      font-weight: 600;
       &:hover {
-        background-color: #f0f0f0;
+        background-color: #efefef;
       }
 
       &.selected {
-        background-color: #d0d5dd;
-        padding: 8px, 12px, 8px, 12px;
-        color: #667085;
-        border-radius: 6px;
+        background-color: #d5d9eb;
+        // padding: 8px, 12px, 8px, 12px;
+        color: black;
+        // border-radius: 6px;
+        font-weight: 600;
       }
     }
   }
