master data page

--- a/apps/web/src/styles/projectFormAddNew.module.scss
+++ b/apps/web/src/styles/projectFormAddNew.module.scss
@@ -94,3 +94,8 @@
   background-color: var(--danger-color);
   color: #b42318;
 }
+.bottomButton{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
