--- a/apps/web/src/styles/projectSettings.module.scss
+++ b/apps/web/src/styles/projectSettings.module.scss
@@ -7,7 +7,19 @@
 .textContent {
   padding-left: 10px;
   padding-top: 10px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 20px;
 }
+
+.title{
+  display: flex;
+  justify-content: flex-start;
+  gap: 10px;
+}
+
 .textContent1 {
   padding: 10px 10px 0px 10px;
   display: flex;
@@ -108,6 +120,8 @@
   background-color: #c4c4c6;
   color: #ffffff;
 }
+
+
 
 .formContainer {
   width: 350px;
