--- a/apps/web/src/styles/newpagination.module.scss
+++ b/apps/web/src/styles/newpagination.module.scss
@@ -9,7 +9,7 @@
   gap: 20px;
   height: 40px;
   width: 100%;
-  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
+  // box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
 .navigateIcon {
