--- a/apps/web/src/styles/projectSettings.module.scss
+++ b/apps/web/src/styles/projectSettings.module.scss
@@ -14,7 +14,7 @@
   gap: 20px;
 }
 
-.title{
+.title {
   display: flex;
   justify-content: flex-start;
   gap: 10px;
@@ -27,30 +27,70 @@
   flex-direction: row;
   gap: 10px;
 }
+
 .content {
   font-size: 0.7rem;
 }
+
 .box {
   position: relative;
 }
+
 .projectField {
   margin-top: -18px;
 }
+
 .projectHeading {
   font-size: 0.8rem;
 }
+
 .fields_container {
   padding-bottom: 10px;
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 20px;
 }
+
+.divOne {
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 10px;
+  padding-top: 20px;
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+
+.image {
+  width: 90%;
+  height: 70%;
+  margin-left: 20px;
+}
+
+.footer {
+  margin-top: 110px;
+}
+
+.cancelButton {
+  background-color: var(--danger-color);
+  color: #b42318;
+}
+
+.button {
+  padding: 10px;
+  gap: 10px;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: row;
+}
+
 .fields_container_1 {
   display: flex;
   justify-content: flex-start;
   width: 100%;
   gap: 20px;
 }
+
 .fields_container_2 {
   display: flex;
   justify-content: flex-start;
@@ -58,6 +98,7 @@
   width: 100%;
   gap: 20px;
 }
+
 .fields_container_3 {
   display: flex;
   justify-content: flex-end;
@@ -65,6 +106,7 @@
   width: 100%;
   gap: 20px;
 }
+
 .box::after {
   content: '';
   display: block;
@@ -86,6 +128,7 @@
   flex-direction: column;
   gap: 20px;
 }
+
 .searchField {
   padding: 10px 10px 0px 10px;
   display: flex;
@@ -93,10 +136,12 @@
   justify-content: space-between;
   gap: 10px;
 }
+
 .inputFilter {
   display: flex;
   gap: 10px;
 }
+
 .searchButton {
   padding: 12px 20px 12px 20px;
   border-radius: 8px;
@@ -104,10 +149,12 @@
   gap: 8px;
   color: #6941c6;
 }
+
 .searchButton:hover {
   background-color: #7f56d9;
   color: #ffffff;
 }
+
 .resetButton [disabled] {
   padding: 12px 20px 12px 20px;
   border-radius: 8px;
@@ -116,6 +163,7 @@
   color: #848289;
   background-color: #ccc;
 }
+
 .resetButton:not([disabled]):hover {
   background-color: #c4c4c6;
   color: #ffffff;
@@ -136,29 +184,36 @@
   gap: 10px;
   padding: 10px 20px 10px 0px;
 }
+
 .cancelButton:hover {
   background-color: #c4c4c6;
   color: #070707;
 }
+
 .titleStyle {
   padding: 10px 10px 1px 2op;
 }
+
 .dividerStyle {
   border-bottom: 1px solid #ccc;
   padding: 5px 1px 5px 1px;
 }
+
 .field {
   padding: 5px 20px 5px 20px;
 }
+
 .header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   padding: 20px 20px 5px 20px;
 }
+
 .inputField {
   width: 30%;
 }
+
 .tablerow {
   display: flex;
   flex-direction: row;
@@ -175,12 +230,14 @@
   gap: 10px;
   align-items: center;
 }
+
 .profileContents {
   display: flex;
   text-align: left;
   flex-direction: column;
   gap: 1px;
 }
+
 .profileName {
   align-items: center;
 }
@@ -201,6 +258,7 @@
     font-weight: 500;
     font-size: 11px;
   }
+
   thead {
     tr {
       th {
@@ -216,6 +274,7 @@
     // align-items: center;
     // text-align: center;
   }
+
   td:hover,
   tr:hover {
     background-color: rgb(239, 239, 239);
@@ -243,7 +302,7 @@
   font-size: small;
   cursor: pointer;
 }
-.addPlan:hover .addText{
+
+.addPlan:hover .addText {
   opacity: .5;
 }
-
