--- a/apps/web/src/styles/projectMasterDataAdd.module.scss
+++ b/apps/web/src/styles/projectMasterDataAdd.module.scss
@@ -54,4 +54,9 @@
     flex-direction: column;
     align-items: center;
   }
-  
+  .emptyButton{
+    margin-top: 25px;
+  }
+  .spanContent{
+    font-weight: 400;
+  }
