--- a/apps/web/src/styles/projectSettings.module.scss
+++ b/apps/web/src/styles/projectSettings.module.scss
@@ -14,10 +14,92 @@
   gap: 20px;
 }
 
-.title {
+.topHeading{
+  // background-color: aqua;
   display: flex;
-  justify-content: flex-start;
-  gap: 10px;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.heading{
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  align-items: center;
+}
+.subHeading{
+  display: flex;
+  flex-direction: row;
+  gap: 7px;
+  align-items: center;
+}
+.emptyDataHandling{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
+}
+
+.textmin{
+  padding: 10px;
+  font-weight: 400;
+  font-size: 14px;
+}
+
+.textmax{
+  font-weight: 700;
+  font-size: 16px;
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6); /* Adjust the alpha value as needed */
+  z-index: 999; /* Ensure the overlay appears above other content */
+  display: none; /* Initially hide the overlay */
+}
+
+
+/* Apply the scrollable_table class to your table element */
+.scrollable_table {
+  width: 100%;
+  height: 100%;
+  padding: 10px 10px; /* Adjust padding */
+  gap: 12px;
+  border-collapse: collapse;
+
+  th,
+  td {
+    padding: 10px 10px 10px 24px; /* Adjust padding */
+    text-align: left;
+    font-weight: 500;
+    // border: 0px 0px 1px;
+    font-size: 12px;
+    border: none; /* Remove borders */
+    border-bottom: 0.1px solid #f0f0f0;
+  }
+
+  td {
+    border-bottom: 0.1px solid #f0f0f0;
+    // border-bottom :0px, 0px, 1px, 0px
+  }
+
+  thead {
+    tr {
+      th {
+        color: #667085;
+        font-weight: 700;
+      }
+    }
+  }
+  td:hover,
+  tr:hover {
+    /* Add hover styles if needed */
+  }
 }
 
 .textContent1 {
