--- a/apps/web/src/styles/project.module.scss
+++ b/apps/web/src/styles/project.module.scss
@@ -125,36 +125,41 @@
   }
 }
 
+/* Apply the scrollable_table class to your table element */
 .scrollable_table {
   width: 100%;
-  border-collapse: collapse;
   height: 100%;
+  padding: 10px 10px; /* Adjust padding */
+  gap: 12px;
+  border-collapse: collapse;
 
   th,
   td {
-    border: 1px solid #000000;
+    padding: 10px 10px 10px 24px; /* Adjust padding */
     text-align: left;
     font-weight: 500;
-    font-size: 11px;
-  }
-  thead {
-    tr {
-      th {
-        background-color: #f2f2f2;
-        text-transform: uppercase;
-        margin-top: 10px;
-        font-weight: 600;
-      }
-    }
+    // border: 0px 0px 1px;
+    font-size: 12px;
+    border: none; /* Remove borders */
+    border-bottom: 0.1px solid #f0f0f0;
   }
 
   td {
-    // align-items: center;
-    // text-align: center;
+    border-bottom: 0.1px solid #f0f0f0;
+    // border-bottom :0px, 0px, 1px, 0px
+  }
+
+  thead {
+    tr {
+      th {
+        color: #667085;
+        font-weight: 700;
+      }
+    }
   }
   td:hover,
   tr:hover {
-    background-color: rgb(239, 239, 239);
+    /* Add hover styles if needed */
   }
 }
 .table_container {
@@ -348,4 +353,39 @@
   flex-direction: column;
   justify-content: space-around;
   gap: 10px;
+}
+
+.subHeading {
+  display: flex;
+  flex-direction: row;
+  gap: 7px;
+  align-items: center;
+}
+.heading {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  align-items: center;
+}
+.topHeading {
+  // background-color: aqua;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.iconStyle {
+  display: flex;
+  flex-direction: row;
+  gap: 5px;
+}
+
+.siteCreatelabel {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  cursor: pointer;
+}
+.sitelabel {
+  color: var(--secondary-color);
 }
