--- a/apps/web/src/styles/projectFormAddNew.module.scss
+++ b/apps/web/src/styles/projectFormAddNew.module.scss
@@ -50,6 +50,7 @@
 .clientNewAddMain {
   display: flex;
   flex-direction: row;
+  cursor: pointer;
   //   background-color: lawngreen;
   align-items: center;
 }
