--- a/apps/web/src/styles/projectMasterDataAdd.module.scss
+++ b/apps/web/src/styles/projectMasterDataAdd.module.scss
@@ -16,7 +16,7 @@
 .subHeading {
   display: flex;
   flex-direction: row;
-  gap: 7px;
+  gap: 3px;
   align-items: center;
 }
 
@@ -54,7 +54,7 @@
   }
 }
 
-.conatiner {
+.container {
   width: 100%;
   padding-top: 10px;
   padding-bottom: 10px;
