--- a/apps/web/src/styles/indentList.module.scss
+++ b/apps/web/src/styles/indentList.module.scss
@@ -61,24 +61,6 @@
   border-bottom: 1px solid #ccc;
 }
 
-// table {
-//   border-collapse: collapse;
-//   width: 100%;
-//   border: 1px solid #ccc;
-// }
-
-// th {
-//   background-color: #f2f2f2;
-//   padding: 8px;
-// }
-
-// tr {
-//   border-bottom: 1px solid #ccc;
-// }
-
-// td {
-//   padding: 8px;
-// }
 
 .tablerow {
   display: flex;
@@ -86,14 +68,6 @@
   column-gap: 15px;
   cursor: pointer;
 }
-
-// tr:nth-child(even) {
-//   background-color: #f2f2f2;
-// }
-
-// tr:hover {
-//   background-color: #e0e0e0;
-// }
 
 .tableContainer {
   padding: 10px 10px 0px 10px;
@@ -131,4 +105,43 @@
   justify-content: flex-end;
   gap: 10px;
   padding: 10px 10px 0px 0px
+}
+
+.scrollable_table {
+  width: 100%;
+  height: 100%;
+  padding: 10px 10px; /* Adjust padding */
+  gap: 12px;
+  border-collapse: collapse;
+
+  th,
+  td {
+    padding: 10px 10px 10px 24px; /* Adjust padding */
+    text-align: left;
+    font-weight: 500;
+    font-size: 12px;
+    border: none; /* Remove borders */
+    border-bottom: 0.1px solid #f0f0f0;
+  }
+
+  td {
+    border-bottom: 0.1px solid #f0f0f0;
+  }
+
+  thead {
+    tr {
+      th {
+        color: #667085;
+        font-weight: 700;
+      }
+    }
+  }
+
+  .status {
+    background-color: #ecfdf3;
+    padding: 6px;
+    border-radius: 50px;
+    color: #027a48;
+  }
+
 }
