--- a/apps/web/src/styles/newpagination.module.scss
+++ b/apps/web/src/styles/newpagination.module.scss
@@ -36,9 +36,13 @@
   width: 30px;
   height: 30px;
   cursor: pointer;
+  font-size: 14px;
+  font-weight: 500;
+  color:  #7F56D9!important;
 }
+
 .menu_item {
-  border-radius: 50%;
+  border-radius: 8px;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -46,4 +50,20 @@
   width: 30px;
   height: 30px;
   cursor: pointer;
+  font-size: 14px;
+  font-weight: 500;
+}
+
+.menu_items {
+  border-radius: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  color:#667085!important;
+  // font-size: 14px!important;
+  // font-weight: 500!important;
 }
