--- a/apps/web/src/styles/labourList.module.scss
+++ b/apps/web/src/styles/labourList.module.scss
@@ -16,6 +16,43 @@
 //   width: 100%;
 //   height: 100vh;
 // }
+.scrollable_table {
+  width: 100%;
+  height: 100%;
+  padding: 10px 10px; /* Adjust padding */
+  gap: 12px;
+  border-collapse: collapse;
+
+  th,
+  td {
+    padding: 10px 10px 10px 24px; /* Adjust padding */
+    text-align: left;
+    font-weight: 500;
+    // border: 0px 0px 1px;
+    font-size: 12px;
+    border: none; /* Remove borders */
+    border-bottom: 0.1px solid #f0f0f0;
+  }
+
+  td {
+    border-bottom: 0.1px solid #f0f0f0;
+    // border-bottom :0px, 0px, 1px, 0px
+  }
+
+  thead {
+    tr {
+      th {
+        color: #667085;
+        font-weight: 700;
+      }
+    }
+  }
+  td:hover,
+  tr:hover {
+    /* Add hover styles if needed */
+  }
+}
+
 
 .textContent {
   padding: 10px 0px 1px 10px;
@@ -87,33 +124,7 @@
   display: none;
 }
 
-// table {
-//   border-collapse: collapse;
-//   width: 100%;
-//   border: 1px solid #ccc;
-// }
 
-// th {
-//   background-color: #f2f2f2;
-//   padding: 8px;
-//   text-align: left;
-// }
-
-// tr {
-//   border-bottom: 1px solid #ccc;
-// }
-
-// td {
-//   vertical-align: middle;
-// }
-
-// tr:nth-child(even) {
-//   background-color: #f2f2f2;
-// }
-
-// tr:hover {
-//   background-color: #e0e0e0;
-// }
 .pagination {
   display: flex;
   justify-content: end;
