--- a/apps/web/src/styles/stockOutWardView.module.scss
+++ b/apps/web/src/styles/stockOutWardView.module.scss
@@ -41,23 +41,43 @@
     list-style: none;
     display: inline;
 }
-// table {
-//     border-collapse: collapse;
-//     width: 100%;
-//     border: 1px solid #ccc;
-//   }
+
+
+.scrollable_table {
+    width: 100%;
+    height: 100%;
+    padding: 10px 10px; /* Adjust padding */
+    gap: 12px;
+    border-collapse: collapse;
   
-//   th {
-//     background-color: lightgray ;
-//     padding: 8px;
-//     text-align: left;
-//     font-weight: 800;
-//   }
+    th,
+    td {
+      padding: 10px 10px 10px 24px; /* Adjust padding */
+      text-align: left;
+      font-weight: 500;
+      font-size: 12px;
+      border: none; /* Remove borders */
+      border-bottom: 0.1px solid #f0f0f0;
+    }
   
-//   tr {
-//     border-bottom: 1px solid #ccc;
-//   }
+    td {
+      border-bottom: 0.1px solid #f0f0f0;
+    }
   
-//   td {
-//     vertical-align: middle;
-//   }
+    thead {
+      tr {
+        th {
+          color: #667085;
+          font-weight: 700;
+        }
+      }
+    }
+  
+    .status {
+      background-color: #ecfdf3;
+      padding: 6px;
+      border-radius: 50px;
+      color: #027a48;
+    }
+  
+  }
