--- a/apps/web/src/styles/stockOutwardList.module.scss
+++ b/apps/web/src/styles/stockOutwardList.module.scss
@@ -54,35 +54,41 @@
 
   .scrollable_table {
     width: 100%;
-    border-collapse: collapse;
     height: 100%;
+    padding: 10px 10px; /* Adjust padding */
+    gap: 12px;
+    border-collapse: collapse;
   
     th,
     td {
-      border: 1px solid #000000;
+      padding: 10px 10px 10px 24px; /* Adjust padding */
       text-align: left;
       font-weight: 500;
-      font-size: 11px;
+      font-size: 12px;
+      border: none; /* Remove borders */
+      border-bottom: 0.1px solid #f0f0f0;
     }
+  
+    td {
+      border-bottom: 0.1px solid #f0f0f0;
+    }
+  
     thead {
       tr {
         th {
-          background-color: #f2f2f2;
-          text-transform: uppercase;
-          margin-top: 10px;
-          font-weight: 600;
+          color: #667085;
+          font-weight: 700;
         }
       }
     }
   
-    td {
-      // align-items: center;
-      // text-align: center;
+    .status {
+      background-color: #ecfdf3;
+      padding: 6px;
+      border-radius: 50px;
+      color: #027a48;
     }
-    td:hover,
-    tr:hover {
-      background-color: rgb(239, 239, 239);
-    }
+  
   }
   
   .resetButton:not([disabled]):hover {
@@ -97,40 +103,13 @@
     border-bottom: 1px solid #ccc;
   }
   
-  // table {
-  //   border-collapse: collapse;
-  //   width: 100%;
-  //   border: 1px solid #ccc;
-  // }
-  
-  // th {
-  //   background-color: #f2f2f2;
-  //   padding: 8px;
-  // }
-  
-  // tr {
-  //   border-bottom: 1px solid #ccc;
-  // }
-  
-  // td {
-  //   padding: 8px;
-  // }
-  
   .tablerow {
     display: flex;
     flex-direction: row;
     column-gap: 15px;
     cursor: pointer;
   }
-  
-  // tr:nth-child(even) {
-  //   background-color: #f2f2f2;
-  // }
-  
-  // tr:hover {
-  //   background-color: #e0e0e0;
-  // }
-  
+
   .tableContainer {
     padding: 10px 10px 0px 10px;
     // height: 100vh;
