--- a/apps/web/src/styles/project.module.scss
+++ b/apps/web/src/styles/project.module.scss
@@ -396,3 +396,57 @@
 .table_data{
   padding: 0px 140px 0px 140px;
 }
+
+.siteCreatelabel {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  cursor: pointer;
+}
+.siteCreatelabelAdd {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  cursor: pointer;
+  background-color: #F9F5FF;
+  border-radius: 8px;
+  padding: 5px;
+}
+
+.siteCreateButton{
+  display: flex;
+  flex-direction: row;
+  gap: 10px;
+}
+.sitelabel {
+  color: var(--secondary-color);
+}
+
+.subHeading{
+  display: flex;
+  flex-direction: row;
+  gap: 7px;
+  align-items: center;
+}
+.emptyDataHandling{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2px;
+}
+
+.textmin{
+  padding: 10px;
+  font-weight: 400;
+  font-size: 14px;
+}
+
+.textmax{
+  font-weight: 700;
+  font-size: 16px;
+}
+.image{
+  display: flex;
+  justify-content: center;
+}
