Re-order the project tabs

--- a/apps/web/src/styles.scss
+++ b/apps/web/src/styles.scss
@@ -2,40 +2,12 @@ html,
 body {
   margin: 0;
   padding: 0;
-
+  // font-family: 'Arial', sans-serif;
   font-family: 'Inter', sans-serif;
 }
 
 // styles.scss
-
 :root {
-  /* Colors */
-  --primary-25-color: #fcfaff;
-  --primary-50-color: #f9f5ff;
-  --primary-100-color: #f4ebff;
-  --primary-200-color: #e9d7fe;
-  --primary-300-color: #d6bbfb;
-  --primary-400-color: #b692f6;
-  --primary-500-color: #9e77ed;
-  --primary-600-color: #7f56d9;
-  --primary-700-color: #6941c6;
-  --primary-800-color: #53389e;
-  --primary-900-color: #42307d;
-  --primary-950-color: #2c1c5f;
-
-  --gray-25-color: #fcfcfd;
-  --gray-50-color: #f9fafb;
-  --gray-100-color: #f2f4f7;
-  --gray-200-color: #eaecf0;
-  --gray-300-color: #d0d5dd;
-  --gray-400-color: #98a2b3;
-  --gray-500-color: #667085;
-  --gray-600-color: #475467;
-  --gray-700-color: #344054;
-  --gray-800-color: #1d2939;
-  --gray-900-color: #101828;
-  --gray-950-color: #0c111d;
-
   --white-base: #fff;
   --black-base: #000;
 
