--- a/apps/web/src/styles/project.module.scss
+++ b/apps/web/src/styles/project.module.scss
@@ -97,7 +97,6 @@
   cursor: not-allowed;
 }
 .stock_Container {
-  padding: 10px;
   margin: 0 auto;
 }
 
@@ -259,9 +258,6 @@
   display: flex;
   justify-content: space-between;
   // background-color: #475467 ;
-}
-.indent_container {
-  padding: 10px;
 }
 
 .formConatiner {
@@ -449,4 +445,34 @@
 .image{
   display: flex;
   justify-content: center;
+}
+.sub_header {
+  height: 10vh;
+  display: flex;
+}
+.logo {
+  font-weight: bold;
+  font-size: 16px;
+  color: var(--secondary-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 5%;
+  cursor: pointer;
+}
+.vertical {
+  position: relative;
+}
+.verticalLine::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 1px; /* Adjust the width of the line */
+  background-color: #7d7d7d; /* Adjust the color as needed */
+  height: 100%;
+}
+.content {
+  font-size: 0.7rem;
+  padding-bottom: 5px;
 }
