--- a/apps/web/src/styles/stockOutwardAdd.module.scss
+++ b/apps/web/src/styles/stockOutwardAdd.module.scss
@@ -170,6 +170,9 @@
 
 .dividerStyle {
     border-bottom: 1px solid #ccc;
+}
+.dividerStyle1 {
+    border-bottom: 1px solid #ccc;
     padding: 5px 1px 5px 1px;
 }
 
@@ -276,4 +279,41 @@
     font-size: 0.8rem;
     color: #333c44;
     font-weight: 600;
+}
+
+.sub_header {
+    height: 10vh;
+    display: flex;
+}
+
+.logo {
+    font-weight: bold;
+    font-size: 16px;
+    color: var(--secondary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 5%;
+    cursor: pointer;
+}
+
+.vertical {
+    position: relative;
+}
+
+.verticalLine::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    width: 1px;
+    /* Adjust the width of the line */
+    background-color: #7d7d7d;
+    /* Adjust the color as needed */
+    height: 100%;
+}
+
+.content {
+    font-size: 0.7rem;
+    padding-bottom: 5px;
 }
