--- a/apps/web/src/styles/projectSettings.module.scss
+++ b/apps/web/src/styles/projectSettings.module.scss
@@ -159,6 +159,13 @@
   margin-left: 20px;
 }
 
+.imageBoQ {
+  width: 90%;
+  height: 175px;
+  margin-left: 20px;
+align-items: center;
+}
+
 .imageAdd {
   display: flex;
   justify-content: center;
