--- a/apps/web/src/styles/newStyles/project.module.scss
+++ b/apps/web/src/styles/newStyles/project.module.scss
@@ -9,9 +9,11 @@
 .mainContainer {
   height: 90vh;
   display: flex;
+
 }
 .sidnav {
-  width: 20%;
+  width: 20%;  
+  border-right: 1px solid #ccc;
 }
 .mainbar {
   width: 75%;
@@ -30,8 +32,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 2px;
-  background-color: #d0d5dd;
+  border-bottom: 1px solid #ccc;
 }
 .vertical {
   position: relative;
