--- a/apps/web/src/styles/project.module.scss
+++ b/apps/web/src/styles/project.module.scss
@@ -1,6 +1,7 @@
 .Container {
   width: 100%;
   padding-bottom: 10px;
+  padding-top: 10px;
 }
 .Container_main {
   padding-left: 10px;
@@ -112,6 +113,15 @@
   margin: 2rem auto;
   &::-webkit-scrollbar {
     width: 0px;
+    background: transparent;
+  }
+}
+
+.tableContainerBOM {
+  padding: 10px;
+  width: 100%;
+  &::-webkit-scrollbar {
+    width: 2px;
     background: transparent;
   }
 }
@@ -447,6 +457,11 @@
   font-size: 16px;
 }
 .image{
+  display: flex;
+  justify-content: center;
+}
+
+.imageAdd{
   display: flex;
   justify-content: center;
 }
