--- a/apps/web/src/styles/vendorSelect.module.scss
+++ b/apps/web/src/styles/vendorSelect.module.scss
@@ -72,21 +72,28 @@
         color: blue;
     }
 
+    .menuItem {
+        color: var(--secondary-color);
+    }
+
     .menuDropdown {
+
         position: absolute;
-        top: 100%;
-        left: 0;
+        top: 0;
+        left: -5500%;
         display: flex;
         flex-direction: column;
         background-color: white;
         border: 1px solid #ccc;
-        border-radius: 4px;
+        border-radius: 8px;
         z-index: 1;
+
 
         div {
             padding: 8px 12px;
             white-space: nowrap;
             cursor: pointer;
+
 
             &.disabled {
                 cursor: not-allowed;
@@ -94,13 +101,13 @@
 
                 &:hover {
                     background-color: inherit;
-                    color: #999;
+                    // color: #999;
                 }
             }
 
             &:not(.disabled):hover {
                 background-color: #f0f0f0;
-                color: blue;
+                color: black;
             }
         }
     }
