--- a/apps/web/src/styles/newStyles/bomlist.module.scss
+++ b/apps/web/src/styles/newStyles/bomlist.module.scss
@@ -232,11 +232,6 @@
   margin-top: 230px;
 }
 
-.bomcontainer {
-  padding: 10px 10px 10px 10px;
-  height: 100%;
-}
-
 .mainheader {
   height: 30%;
   // background-color: #0042d2;
@@ -247,31 +242,6 @@
   flex-direction: column;
   gap: 10px;
   padding-bottom: 10px;
-}
-
-.mainTextContent {
-  padding: 10px 5px 10px 10px;
-  display: flex;
-  align-items: center;
-}
-
-.textContent_1 {
-  width: 50%;
-}
-
-.textContent {
-  padding: 15px 10px 10px 20px;
-}
-
-.content {
-  font-size: 0.7rem;
-}
-
-.backButton {
-  width: 50%;
-  display: flex;
-  justify-content: flex-end;
-  align-items: end;
 }
 
 .box {
@@ -299,49 +269,6 @@
   display: inline-block;
   margin-left: 5px;
   opacity: 0.9;
-}
-
-.saveButton {
-  display: flex;
-  justify-content: end;
-  padding-right: 10px;
-}
-
-.totalPanel {
-  display: flex;
-  justify-content: flex-end;
-  background-color: #ccc;
-  padding: 10px;
-}
-
-.panelList {
-  width: 20%;
-  padding: 10px;
-}
-
-.panel {
-  display: flex;
-  justify-content: space-between;
-  padding: 10px;
-  text-align: right;
-  align-items: end;
-}
-
-.panelTitle {
-  text-align: right;
-  align-items: end;
-  color: rgb(0, 0, 0);
-}
-
-.groupButton {
-  display: flex;
-//   margin-top: 1%;
-//   justify-content: flex-end;
-//   padding-right: 10px;
-}
-
-.Secondcontainer {
-  height: 100vh;
 }
 
 .abstractButton {
@@ -350,23 +277,6 @@
   margin-top: 230px;
 }
 
-.bomcontainer {
-  padding: 10px 10px 10px 10px;
-  height: 100%;
-}
-
-.mainheader {
-  height: 30%;
-  // background-color: #0042d2;
-}
-
-.mainBody {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-  padding-bottom: 10px;
-}
-
 .mainTextContent {
   padding: 10px 5px 10px 10px;
   display: flex;
@@ -390,33 +300,6 @@
   display: flex;
   justify-content: flex-end;
   align-items: end;
-}
-
-.box {
-  position: relative;
-}
-
-.box::after {
-  content: '';
-  display: block;
-  width: 100%;
-  height: 1px;
-  background-color: #ccc;
-  position: absolute;
-  bottom: 20;
-  left: 10;
-}
-
-.box:last-child::after {
-  display: none;
-}
-
-.smallred {
-  font-size: 0.6rem;
-  color: red;
-  display: inline-block;
-  margin-left: 5px;
-  opacity: 0.9;
 }
 
 .boqSubCategoryTable {
@@ -448,4 +331,54 @@
       }
     }
   }
+}
+
+.footer {
+  // position: fixed;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
+.cancelButton {
+  background-color: var(--danger-color);
+  color: #b42318;
+}
+.dividerStyle {
+  border-bottom: 1px solid #ccc;
+  padding: 5px 1px 5px 1px;
+}
+.cancelButton {
+  background-color: var(--danger-color);
+  color: #b42318;
+}
+
+.button {
+  padding: 10px;
+  gap: 10px;
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: row;
+  position: relative;
+}
+
+.bomcontainer {
+  padding-top: 10px;
+  height: 100%;
+}
+.sub_container {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+.sub_sub_container {
+  // height: 80vh;
+}
+.sub_sub_container_2 {
+  // height: 20vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
 }
