indent approval filter condition add

--- a/apps/web/src/styles/indentList.module.scss
+++ b/apps/web/src/styles/indentList.module.scss
@@ -20,7 +20,9 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: center;
   gap: 10px;
+  // background-color: #027a48;
 }
 
 .inputFilter {
